added answer question and comment session

--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -25,6 +25,9 @@
       }
     }
     .question-details {
+      overflow-y: hidden;
+      height: 7rem;
+      position: relative;
       a {
         text-decoration: none;
         .question-name {
@@ -41,6 +44,8 @@
       }
       .tags {
         margin-top: 10px;
+        position: absolute;
+        bottom: 8px;
         button {
           font-family: $font;
           color: $normalColor;
