--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat:wght@400;500;700&display=swap');
 
 $font: 'Montserrat', sans-serif;
 $normalColor: #898787;
 $normalSize: 18px;
 $breakpoint-phone: 480px;
+$fira: 'Fira Code', sans-serif;
