--- a/frontend/src/styles/_button.scss
+++ b/frontend/src/styles/_button.scss
@@ -1,10 +1,11 @@
 .btn {
   background-color: #ddb1ff;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   font-family: $font;
   color: $normalColor;
   font-size: $normalSize;
+  cursor: pointer;
 }
 
 .comment-btn {
@@ -25,8 +26,54 @@
 }
 .ask-question {
   background-color: rgba(9, 18, 255, 0.53);
+  box-shadow: 6px 6px 20px rgba(9, 18, 255, 0.53);
   width: 8rem;
   color: white;
   height: 1.9rem;
-  cursor: pointer;
+}
+.question-form-submit {
+  width: 18rem;
+  height: 2.5rem;
+  margin-left: 13rem;
+  margin-top: 8rem;
+  font-family: $fira;
+  color: #535252;
+  letter-spacing: 1px;
+  box-shadow: 6px 6px 20px #ddb1ff;
+}
+.markdown-menu-btn {
+  transition: all 0.2s linear;
+  width: 5rem;
+  margin-left: 5px;
+  border-radius: 0;
+  font-family: $fira;
+  background-color: white;
+  border-left: 1px solid $normalColor;
+  border-right: 1px solid $normalColor;
+  border-top: 1px solid $normalColor;
+  position: relative;
+}
+.markdown-menu-btn::after {
+  transition: all 0.2s linear;
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  background-color: white;
+  top: 24px;
+  left: 0;
+}
+
+.markdown-menu-btn.active {
+  background-color: rgba(0, 0, 0, 0.09);
+  color: $normalColor;
+}
+.markdown-menu-btn.active::after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  background-color: transparent;
+  top: 24px;
+  left: 0;
 }
