--- a/frontend/src/styles/mobileResponsive/_mobile.scss
+++ b/frontend/src/styles/mobileResponsive/_mobile.scss
@@ -30,4 +30,28 @@
   .question-name {
     font-size: 17px;
   }
+  .add-comment {
+    margin: 0;
+  }
+  .question-form-container {
+    width: 96vw;
+    // height: 30rem;
+    // transform: translate(-54%, -50%);
+    padding: 0;
+    input {
+      border: 1px solid black;
+    }
+    .markdown-wrapper {
+      padding: 0;
+      .html-markdown-view {
+        img {
+          width: 100%;
+          margin-left: 0px;
+        }
+      }
+    }
+    .question-form-submit {
+      margin-left: 3rem;
+    }
+  }
 }
