--- a/frontend/src/styles/_askQuestion.scss
+++ b/frontend/src/styles/_askQuestion.scss
@@ -6,9 +6,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: $primaryCardColor;
   border-radius: 10px;
-  box-shadow: 6px 6px 20px #ced0ff;
+  box-shadow: $shadowLength #ced0ff;
   padding: 20px 10px 0 40px;
   label {
     font-family: $font;
@@ -20,8 +20,10 @@
     width: 100%;
     height: 1.9rem;
     font-family: $fira;
-    color: #535252;
+    color: $normalColor;
     font-size: $normalSize;
+    background-color: $primaryCardColor;
+    border: 1px solid white;
     outline: none;
     padding-left: 8px;
   }
@@ -41,7 +43,7 @@
       width: 100%;
       height: 12rem;
       font-family: $fira;
-      color: #535252;
+      color: $normalColor;
       font-size: $normalSize;
       padding-left: 8px;
       padding-top: 8px;
@@ -49,26 +51,21 @@
       border-left: 1px solid $normalColor;
       border-bottom: 1px solid $normalColor;
       border-right: 1px solid $normalColor;
+      background-color: $primaryCardColor;
     }
     .html-markdown-view {
       display: none;
       width: 100%;
       height: 12rem;
       font-family: $fira;
-      color: #535252;
+      color: $normalColor;
       font-size: $normalSize;
       padding: 8px 8px 0 8px;
       border: 0;
       border-left: 1px solid $normalColor;
       border-bottom: 1px solid $normalColor;
       border-right: 1px solid $normalColor;
-      overflow: scroll;
-      img {
-        width: 29rem;
-        height: 17rem;
-        object-fit: cover;
-        margin-left: 4rem;
-      }
+      overflow: auto;
     }
   }
 }
