--- a/frontend/src/styles/questionsAndAnswers/_answer.scss
+++ b/frontend/src/styles/questionsAndAnswers/_answer.scss
@@ -1,12 +1,13 @@
 .answer-container {
-  background-color: white;
   margin-left: 10rem;
+  position: relative;
   margin-right: 9rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
+  border: 1px solid $primaryButtonColor;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
   div {
