--- a/frontend/src/styles/_addComment.scss
+++ b/frontend/src/styles/_addComment.scss
@@ -7,9 +7,10 @@
     border: none;
     resize: none;
     width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid $normalColor;
     font-family: $font;
     color: $normalColor;
     font-size: $normalSize;
+    background-color: transparent;
   }
 }
