--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat:wght@400;500;700&family=Roboto&family=Shadows+Into+Light&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat:wght@400;500;700&family=Roboto&family=Shadows+Into+Light&display=swap");
 .analytics {
   width: 90vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .analytics p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
 }
 
@@ -25,15 +25,15 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border-radius: 10px;
   margin-top: 20px;
 }
@@ -47,8 +47,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 10px;
 }
 
@@ -61,13 +61,13 @@
 }
 
 .question-container div .postedPerson p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
 
 .question-container div .question {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
@@ -81,7 +81,7 @@
   width: 100%;
   height: 17rem;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .question-container div .question p div strong {
@@ -100,19 +100,19 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border-radius: 10px;
   border: 1px solid rgba(9, 18, 255, 0.53);
   -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
 }
 
@@ -125,8 +125,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 10px;
 }
 
@@ -139,13 +139,13 @@
 }
 
 .answer-container div .postedPerson p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
 
 .answer-container div .answer {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
@@ -154,7 +154,7 @@
   background-color: #ddb1ff;
   border: none;
   border-radius: 5px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   cursor: pointer;
@@ -169,7 +169,7 @@
   padding-top: 4px;
   background-color: transparent;
   -webkit-transform: translate(-100%, -100%);
-  transform: translate(-100%, -100%);
+          transform: translate(-100%, -100%);
   font-size: 1.7rem;
   color: #b8ffff;
 }
@@ -183,7 +183,7 @@
 .ask-question {
   background-color: rgba(9, 18, 255, 0.53);
   -webkit-box-shadow: 6px 6px 20px rgba(9, 18, 255, 0.53);
-  box-shadow: 6px 6px 20px rgba(9, 18, 255, 0.53);
+          box-shadow: 6px 6px 20px rgba(9, 18, 255, 0.53);
   width: 8rem;
   color: white;
   height: 1.9rem;
@@ -194,12 +194,12 @@
   height: 2.5rem;
   margin-left: 13rem;
   margin-top: 1rem;
-  font-family: 'Fira Code', sans-serif;
+  font-family: "Fira Code", sans-serif;
   color: #c8c7cc;
   letter-spacing: 1px;
   background-color: rgba(9, 18, 255, 0.53);
   -webkit-box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
-  box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
+          box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
 }
 
 .markdown-menu-btn {
@@ -208,7 +208,7 @@
   width: 5rem;
   margin-left: 5px;
   border-radius: 0;
-  font-family: 'Fira Code', sans-serif;
+  font-family: "Fira Code", sans-serif;
   background-color: white;
   border-left: 1px solid #c8c7cc;
   border-right: 1px solid #c8c7cc;
@@ -246,7 +246,7 @@
 .logout-btn {
   width: 7rem;
   padding: 3px 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #fc7a7a;
   color: white;
   border: 1px solid red;
@@ -276,13 +276,13 @@
   display: flex;
   padding-bottom: 4px;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border-bottom: 0.01px solid rgba(0, 0, 0, 0.093);
 }
 
 .comment p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
@@ -298,10 +298,11 @@
   border: none;
   resize: none;
   width: 100%;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  font-family: 'Montserrat', sans-serif;
+  border-bottom: 1px solid #c8c7cc;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
+  background-color: transparent;
 }
 
 .register-form {
@@ -314,27 +315,27 @@
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   border-radius: 20px;
   -webkit-box-shadow: 1px 1px 20px #0e1127;
-  box-shadow: 1px 1px 20px #0e1127;
+          box-shadow: 1px 1px 20px #0e1127;
 }
 
 .register-form h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   margin-bottom: 16px;
 }
 
 .register-form .input-error-show {
   color: #f84f4f;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
   margin-top: -4px;
 }
 
 .register-form .form-input-container label {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   display: block;
@@ -346,7 +347,7 @@
   height: 1.9rem;
   width: 13rem;
   padding-left: 7px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   border: none;
@@ -358,7 +359,7 @@
 .register-form .form-input-container .user-gender-container label {
   display: inline;
   color: rgba(0, 0, 0, 0.8);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .register-form .form-input-container .user-gender-container .user-gender {
@@ -367,8 +368,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 9px;
   margin-left: 19px;
   gap: 30px;
@@ -385,14 +386,14 @@
   width: 10rem;
   margin: 25px 0 0 25px;
   border-radius: 5px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 2px;
   cursor: pointer;
   -webkit-box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
-  box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
+          box-shadow: 1px 1px 6px rgba(9, 18, 255, 0.53);
 }
 
 .login-form {
@@ -405,14 +406,14 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
   margin-bottom: 20px;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
 }
 
 .navbar img {
@@ -428,16 +429,16 @@
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-color: #0e1127;
   border-radius: 10px;
   -webkit-box-shadow: 1px 1px 6px #ced0ff;
-  box-shadow: 1px 1px 6px #ced0ff;
+          box-shadow: 1px 1px 6px #ced0ff;
   padding: 20px 10px 0 40px;
 }
 
 .question-form-container label {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
@@ -446,7 +447,7 @@
   display: block;
   width: 100%;
   height: 1.9rem;
-  font-family: 'Fira Code', sans-serif;
+  font-family: "Fira Code", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   background-color: #0e1127;
@@ -474,7 +475,7 @@
   resize: none;
   width: 100%;
   height: 12rem;
-  font-family: 'Fira Code', sans-serif;
+  font-family: "Fira Code", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   padding-left: 8px;
@@ -490,7 +491,7 @@
   display: none;
   width: 100%;
   height: 12rem;
-  font-family: 'Fira Code', sans-serif;
+  font-family: "Fira Code", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
   padding: 8px 8px 0 8px;
@@ -506,7 +507,7 @@
   top: 40px;
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
-  transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
 }
 
 .answer-form .markdown-wrapper .markdown-editor {
@@ -524,7 +525,7 @@
   padding-left: 10px;
   left: 50%;
   -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+          transform: translateX(-50%);
   border-left: 1px solid rgba(0, 0, 0, 0.09);
   border-right: 1px solid rgba(0, 0, 0, 0.09);
 }
@@ -534,8 +535,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .question-link-container .posted-user img {
@@ -547,7 +548,7 @@
 }
 
 .question-link-container .posted-user p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 18px;
 }
@@ -563,13 +564,13 @@
 }
 
 .question-link-container .question-details a .question-name {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   margin-left: 29px;
 }
 
 .question-link-container .question-details .question-content {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #c8c7cc;
   font-size: 15px;
   margin-left: 29px;
@@ -582,7 +583,7 @@
 }
 
 .question-link-container .question-details .tags button {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: black;
   font-size: 16px;
   margin-left: 20px;
@@ -593,7 +594,7 @@
   border-radius: 5px;
   cursor: pointer;
   -webkit-box-shadow: 1px 1px 6px #ced0ff;
-  box-shadow: 1px 1px 6px #ced0ff;
+          box-shadow: 1px 1px 6px #ced0ff;
 }
 
 .question-link-container .bottom-line {
@@ -614,7 +615,7 @@
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
   .lastUpdate {
     -ms-grid-row: 2;
@@ -670,14 +671,14 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #efefef;
   border: 0.2px solid rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 6px 6px 20px #e2e1e1;
-  box-shadow: 6px 6px 20px #e2e1e1;
+          box-shadow: 6px 6px 20px #e2e1e1;
   padding: 2px 0;
   cursor: pointer;
 }
@@ -688,7 +689,7 @@
 
 .user-profile-btn P {
   color: #c8c7cc;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
 }
 
@@ -702,36 +703,34 @@
   padding: 30px 0 30px 10px;
   border-radius: 10px;
   -webkit-transform: translateX(18rem);
-  transform: translateX(18rem);
+          transform: translateX(18rem);
   -webkit-box-shadow: 6px 6px 20px #ced0ff;
-  box-shadow: 6px 6px 20px #ced0ff;
-  -webkit-transition: -webkit-transform 0.5s
-    cubic-bezier(0.175, 0.885, 0.32, 1.275);
+          box-shadow: 6px 6px 20px #ced0ff;
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: -webkit-transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    -webkit-transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   z-index: 3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .user-profile-menu-wrapper .view-profile-page {
   color: rgba(0, 0, 0, 0.7);
   width: 10rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   background-color: #e2e1e1;
   -webkit-box-shadow: 6px 6px 20px #e2e1e1;
-  box-shadow: 6px 6px 20px #e2e1e1;
+          box-shadow: 6px 6px 20px #e2e1e1;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 4px 9px;
@@ -739,7 +738,7 @@
 
 .user-profile-menu-wrapper-active {
   -webkit-transform: translate(1rem);
-  transform: translate(1rem);
+          transform: translate(1rem);
 }
 
 .user-content-and-user-side-bar-menu-container {
@@ -757,14 +756,14 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
   padding-top: 2rem;
 }
 
 .user-content-and-user-side-bar-menu-container .side-bar-user-menu a {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #c8c7cc;
   text-decoration: none;
   width: 87%;
@@ -775,11 +774,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .user-content-and-user-side-bar-menu-container .content-display-wrapper {
@@ -794,7 +793,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -857,7 +856,7 @@ blockquote p {
 
 pre {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   color: white;
   background: #141414;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -870,15 +869,15 @@ pre {
   overflow-wrap: normal;
   line-height: 1.5;
   -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
+    -o-tab-size: 4;
+       tab-size: 4;
   -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+      -ms-hyphens: none;
+          hyphens: none;
   border-radius: 0.5em;
   border: 0.3em solid #545454;
   -webkit-box-shadow: black 1px 1px 0.5em inset;
-  box-shadow: black 1px 1px 0.5em inset;
+          box-shadow: black 1px 1px 0.5em inset;
   margin: 0.5em 0px;
   overflow: auto;
   padding: 1em;
@@ -888,14 +887,14 @@ img {
   width: 40rem;
   height: 20rem;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .question-content img {
   width: 98%;
   height: 5rem;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   margin-right: 35px;
 }
 
