Created the learning section

--- a/frontend/src/styles/_button.scss
+++ b/frontend/src/styles/_button.scss
@@ -102,3 +102,13 @@
   top: 10px;
   right: 0;
 }
+.subject-sitemap-btn {
+  background-color: transparent;
+  color: $normalColor;
+  font-size: 2rem;
+  font-family: $font;
+}
+// .subject-sitemap-btn:hover,
+// .subject-sitemap-btn:focus {
+//   background-color: #2980b9;
+// }
