--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat:wght@400;500;700&family=Roboto&family=Shadows+Into+Light&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Indie+Flower&family=Montserrat:wght@400;500;700&family=Roboto&family=Shadows+Into+Light&display=swap");
 .analytics {
   width: 90vw;
   display: -webkit-box;
@@ -267,6 +267,13 @@
   position: absolute;
   top: 10px;
   right: 0;
+}
+
+.subject-sitemap-btn {
+  background-color: transparent;
+  color: #c8c7cc;
+  font-size: 2rem;
+  font-family: "Montserrat", sans-serif;
 }
 
 .comment {
@@ -787,6 +794,29 @@
   overflow-y: auto;
 }
 
+.subject-sitemap-container {
+  border-right: 1px solid rgba(9, 18, 255, 0.53);
+  width: 14rem;
+  padding-left: 1rem;
+}
+
+.subject-sitemap-container .subject-sitemap-content {
+  display: none;
+  padding-left: 20px;
+}
+
+.subject-sitemap-container .subject-sitemap-content a {
+  color: #c8c7cc;
+  display: block;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+}
+
+.subject-sitemap-container .show {
+  display: block;
+}
+
 *,
 *::after,
 *::before {
@@ -799,30 +829,43 @@
 body {
   background-color: #080a17;
   overflow-x: hidden;
+  line-height: 30px;
 }
 
 h1 {
   font-size: 20px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 h2 {
   font-size: 18px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 h3 {
   font-size: 17px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 h4 {
   font-size: 16px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 h5 {
   font-size: 15px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 h6 {
   font-size: 14px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 a img {
@@ -831,63 +874,38 @@ a img {
 }
 
 p {
-  font-size: 16px;
-  line-height: 30.2px;
+  font-family: "Roboto", sans-serif;
+  color: #c8c7cc;
+  font-size: 18px;
 }
 
 ul li {
   margin-left: 30px;
   font-size: 16px;
+  color: #c8c7cc;
+  font-family: "Montserrat", sans-serif;
 }
 
 blockquote {
   margin-left: 10px;
   border-left: 10px solid rgba(9, 18, 255, 0.53);
+  width: 20rem;
   padding-left: 3px;
   font-family: 'Shadows Into Light', cursive;
   margin-top: 5px;
+  margin-left: 4rem;
   margin-bottom: 10px;
   background-color: #0e1127;
 }
 
 blockquote p {
   font-size: 20px;
-}
-
-pre {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: white;
-  background: #141414;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1em;
-  text-align: left;
-  text-shadow: black 0px -0.1em 0.2em;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  overflow-wrap: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-    -o-tab-size: 4;
-       tab-size: 4;
-  -webkit-hyphens: none;
-      -ms-hyphens: none;
-          hyphens: none;
-  border-radius: 0.5em;
-  border: 0.3em solid #545454;
-  -webkit-box-shadow: black 1px 1px 0.5em inset;
-          box-shadow: black 1px 1px 0.5em inset;
-  margin: 0.5em 0px;
-  overflow: auto;
-  padding: 1em;
+  font-family: 'Shadows Into Light', cursive;
 }
 
 img {
-  width: 40rem;
-  height: 20rem;
-  -o-object-fit: cover;
-     object-fit: cover;
+  width: 18rem;
+  height: 18rem;
 }
 
 .question-content img {
@@ -900,5 +918,38 @@ img {
 
 .question-content h1 {
   font-size: 18px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table,
+th,
+td {
+  border: 1px solid white;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+
+th {
+  text-align: center !important;
+}
+
+td {
+  text-align: center !important;
+}
+
+.markdown-container {
+  width: 50rem;
+  margin-left: 2rem;
+}
+
+.subject-content-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=main.css.map */
