--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -830,6 +830,7 @@ body {
   background-color: #080a17;
   overflow-x: hidden;
   line-height: 30px;
+  padding-bottom: 1rem;
 }
 
 h1 {
@@ -887,20 +888,33 @@ ul li {
 }
 
 blockquote {
-  margin-left: 10px;
   border-left: 10px solid rgba(9, 18, 255, 0.53);
-  width: 20rem;
+  width: 30rem;
   padding-left: 3px;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Indie Flower', cursive;
   margin-top: 5px;
-  margin-left: 4rem;
+  margin-left: 2rem;
   margin-bottom: 10px;
   background-color: #0e1127;
 }
 
 blockquote p {
   font-size: 20px;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Indie Flower', cursive;
+}
+
+p img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+p a img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 14rem;
+  height: 2rem;
 }
 
 img {
@@ -923,6 +937,11 @@ img {
 table {
   width: 100%;
   border-collapse: collapse;
+  margin: 10px 0;
+}
+
+code {
+  color: #f3bd0b;
 }
 
 table,
@@ -943,7 +962,7 @@ td {
 }
 
 .markdown-container {
-  width: 50rem;
+  width: 50%;
   margin-left: 2rem;
 }
 
