The doctype chapter has been added to the subjects

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Indie+Flower&family=Montserrat:wght@400;500;700&family=Roboto&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&family=Fira+Code&family=Montserrat:wght@400;500;700&family=Roboto&display=swap');
 $font: 'Montserrat', sans-serif;
 $normalColor: #c8c7cc;
 $normalSize: 18px;
